canary_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment-v2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend

  template:
    metadata:
      labels:
        app: backend

    spec:
      containers:
        - name: backend
          image: kupr744/backend
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prime-api-testing
spec:
  replicas: 3
  selector:
    matchLabels:
      app: prime-api-testing

  template:
    metadata:
      labels:
        app: prime-api-testing

    spec:
      containers:
        - name: prime-api-testing
          image: kupr744/prime-api-testing
          imagePullPolicy: Always
          ports:
            - containerPort: 3001
