canary_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress-v2
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "100"
  labels:
    name: myingress-v2
spec:
  defaultBackend:
    service:
      name: backend-service-v2
      port:
        number: 80
  rules:
    - http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: backend-service-v2
              port: 
                number: 80
        - pathType: Prefix
          path: "/prime"
          backend:
            service:
              name: prime-api-service-v2
              port:
                number: 80
  ingressClassName: nginx
